# ChangeLog for dev-tex/svninfo
# Copyright 2005-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/svninfo/ChangeLog,v 1.13 2008/01/16 12:13:47 aballier Exp $

  16 Jan 2008; Alexis Ballier <aballier@gentoo.org> svninfo-0.6.ebuild:
  variable quoting

  16 Jan 2008; Alexis Ballier <aballier@gentoo.org>
  -files/svninfo-0.2.1-latex-compile.patch, -svninfo-0.2.1.ebuild,
  -svninfo-0.5.ebuild:
  remove old

*svninfo-0.7.1 (16 Jan 2008)

  16 Jan 2008; Alexis Ballier <aballier@gentoo.org> +svninfo-0.7.1.ebuild:
  version bump, bug #203924

  10 Aug 2007; Steve Dibb <beandog@gentoo.org> svninfo-0.6.ebuild:
  amd64 stable, bug 187990

  12 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml:
  Replaced text-markup by tex as maintaining herd (text-markup split).

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  17 Jul 2006; Marcus D. Hanwell <cryos@gentoo.org> svninfo-0.6.ebuild:
  Added -j1 to emake to solve parallel build issues encountered.

*svninfo-0.6 (16 Jul 2006)

  16 Jul 2006; Marcus D. Hanwell <cryos@gentoo.org> +svninfo-0.6.ebuild:
  Version bump.

  16 Mar 2006; Martin Ehmsen <ehmsen@gentoo.org> svninfo-0.2.1.ebuild:
  Added inherit eutils for epatch, found by QA script.

  09 Mar 2006; Martin Ehmsen <ehmsen@gentoo.org> svninfo-0.5.ebuild:
  Added inherit eutils for epatch

*svninfo-0.5 (03 Mar 2006)

  03 Mar 2006; Alexandre Buisse <nattfodd@gentoo.org>
  +files/svninfo-0.5-latex-compile.patch, +svninfo-0.5.ebuild:
  Bump to 0.5 as requested on bug #124765. Homepage changes and SRC_URI is now
  the upstream tarball.

  12 Feb 2006; Alexandre Buisse <nattfodd@gentoo.org>
  +files/svninfo-0.2.1-latex-compile.patch, svninfo-0.2.1.ebuild:
  Allow clean compilation of the documentation and uses the provided Makefile
  to do so (closing bug #122486).

*svninfo-0.2.1 (01 Aug 2005)

  01 Aug 2005; Nicholas Jones <carpaski@gentoo.org> +svninfo-0.2.1.ebuild: