@@ -1,7 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX svninfo-0.5-latex-compile.patch 269 RMD160 94b3f0964a023af692cc2df496c28bd6e82f653b SHA1 e8369b145d9a58fea20515f9c0448544db986e9d SHA256 48e44728adef50ed336273ee25e88e4b6c4ce688d27b223cffc76257583dbefb
 DIST svninfo-0.6.tar.gz 13690 RMD160 35f6e8bcfbaa747dd110529af62f7aee6e816a9e SHA1 b82be52aeeabda45bb875fa4debaaa08b6955ae3 SHA256 6373b431242ffc9fffc67352805c2d39d13682dab45f254f63d1b78b21f08b50
 DIST svninfo-0.7.1.tar.gz 14782 RMD160 ac1b80cb2a5a8dda4a1aa223ac83fdc618e08ff2 SHA1 93af061a1ae6d96dd2e80368c31d64305d3eb3c8 SHA256 068ffd5f7a15b5b39449526b9dc45182a3f958c230b1e005dbc16dd3a58ec292
+DIST svninfo-0.7.2.tar.gz 14887 RMD160 48e9c32a00fe504c9ff42ee6174319af142e6c2c SHA1 40ea6ba3b876d5925f5bdd3a5575cb0af950c70b SHA256 85ca28d1ac03fbf1f5b9251654147d1db765667a33114eb18e5d340b350fe922
 EBUILD svninfo-0.6.ebuild 675 RMD160 fb1707bc3330733558f85216c63fcba8307e5616 SHA1 43dda5fea6e2bd46203402ae7a67c630dc2b4a44 SHA256 46f0dfd408a4ae4e3d5187536bbc70ab083312f62c434c373977bab724a1a9de
 EBUILD svninfo-0.7.1.ebuild 678 RMD160 6db2a3d08a7eaa59159b433c8877d051a78068c4 SHA1 ebbbf65b96d4740f2037cc7fd9d808885e17082b SHA256 d77be799acf1ea697b3f7598628fe17b0c93750e8f1f55329587c8170307a173
-MISC ChangeLog 2008 RMD160 cd78a75b46621df0576b24780695cd544f47c32b SHA1 add4eee2d3ba12463e8a0d6c20ef5818c8e82c17 SHA256 b46418250ea6be92cbc0fe63fb400f924dd30a7a816f0c4c53c1abd5fec4750a
+EBUILD svninfo-0.7.2.ebuild 678 RMD160 d6b71559b7803746f6386b122f75be6a2fa751f4 SHA1 4284b673bfd6b5f787d849307c8247f94591e619 SHA256 0079ae686b2edb66f05225aa631cedbb6ad7a3c81297545bf7ec60f3f96fa534
+MISC ChangeLog 2129 RMD160 ac06fddab9ad6190ec7c1b3a1b27703aea4602fd SHA1 d944e045b5976ce5b88927c4441e5bb4ac16e8ce SHA256 b99bbc16b62c70ae28f60179b96e671921c528a1212a9b59dee40adce4722ea1
 MISC metadata.xml 156 RMD160 2bf6b2ed9ff0fcef1e902cf093ccf4ae2dcc70a0 SHA1 e9260cd53905d8569cf3327ded4c6d01653fc389 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkgZjoMACgkQvFcC4BYPU0qT0QCgvUmZxnG0CYD7ENSNNBjtzJJ9
+JfUAoME5k2smhY5qC940GN3ogYOGg/cI
+=uheA
+-----END PGP SIGNATURE-----
