@@ -1,0 +1,25 @@
+# Copyright 2005-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/svninfo/svninfo-0.7.2.ebuild,v 1.1 2008/05/01 09:33:48 aballier Exp $
+
+inherit latex-package eutils
+
+LICENSE="LPPL-1.2"
+DESCRIPTION="A LaTeX module to acces SVN version info"
+HOMEPAGE="http://www.brucker.ch/projects/svninfo/index.en.html"
+SRC_URI="http://www.brucker.ch/projects/svninfo/download/${P}.tar.gz"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+DOCS="README svninfo.pdf"
+
+src_unpack() {
+	unpack ${A}
+	cd "${S}"
+	epatch "${FILESDIR}/${PN}-0.5-latex-compile.patch"
+}
+
+src_compile() {
+	emake -j1 || die "compilation failed"
+}
